--- a/package.json
+++ b/package.json
@@ -4,30 +4,28 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "format": "npm run format"
+        "format": "prettier --write resources/**/*.blade.php resources/**/*.js resources/**/*.css"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@tailwindcss/vite": "^4.1.11",
-        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.18",
         "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
         "flowbite-typography": "^1.0.5",
+        "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.5.6",
         "prettier": "^3.3.3",
         "prettier-plugin-blade": "^2.1.19",
         "prettier-plugin-tailwindcss": "^0.6.6",
-        "tailwindcss": "^3.1.0",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.4.17",
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "flowbite": "^3.1.2",
         "node-cron": "^3.0.3",
-        "shelljs": "^0.8.5",
-        "@tailwindcss/cli": "^4.1.11",
-        "@tailwindcss/postcss": "^4.1.11",
-        "flowbite": "^3.1.2"
+        "shelljs": "^0.8.5"
     }
 }
