--- a/package.json
+++ b/package.json
@@ -3,29 +3,22 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "format": "prettier --write resources/**/*.blade.php resources/**/*.js resources/**/*.css"
+        "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.18",
         "autoprefixer": "^10.4.21",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "flowbite-typography": "^1.0.5",
-        "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.5.6",
-        "prettier": "^3.3.3",
-        "prettier-plugin-blade": "^2.1.19",
-        "prettier-plugin-tailwindcss": "^0.6.6",
-        "sass": "^1.56.1",
+        "laravel-vite-plugin": "^1.0.5",
+        "postcss": "^8.4.32",
+        "rollup": "^3.29.4",
         "tailwindcss": "^3.4.17",
-        "vite": "^7.0.4"
+        "vite": "^5.0.0"
     },
     "dependencies": {
-        "flowbite": "^3.1.2",
-        "node-cron": "^3.0.3",
-        "shelljs": "^0.8.5"
+        "flowbite": "^3.1.2"
+    },
+    "overrides": {
+        "rollup": "^3.29.4"
     }
 }
