--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-       "laravel/framework": "^12.0",
+        "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "predis/predis": "^2.0",
         "spatie/laravel-activitylog": "^4.10",
-        "spatie/laravel-permission": "^6.20",
-        "predis/predis": "^2.0"
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
