--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@tailwindcss/cli": "^4.1.11",
         "@tailwindcss/postcss": "^4.1.11",
+        "apexcharts": "^3.46.0",
         "flowbite": "^3.1.2",
         "node-cron": "^3.0.3",
         "shelljs": "^0.8.5"
