--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/ui": "^4.6",
         "predis/predis": "^2.0",
         "spatie/laravel-activitylog": "^4.10",
-        "spatie/laravel-permission": "^6.20"
+        "spatie/laravel-permission": "^6.20",
+        "symfony/http-client": "^7.3",
+        "symfony/mailgun-mailer": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
