--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "php-flasher/flasher-laravel": "^2.1",
         "predis/predis": "^2.0",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.20",
